--- a/index.html
+++ b/index.html
@@ -6,90 +6,108 @@
   <title>7 Brothers AB</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      background-color: #1a1a1a;
+      background-color: #121212;
       color: white;
     }
     header {
-      background: repeating-linear-gradient(90deg, #d30000, #d30000 40px, #333 40px, #333 80px);
+      background: linear-gradient(90deg, #b60000, #1a1a1a);
       text-align: center;
       padding: 2rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.6);
     }
     header img {
-      width: 200px;
+      width: 180px;
+      border-radius: 10px;
     }
     h1 {
-      font-size: 2.5rem;
-      margin-top: 0.5rem;
+      font-size: 2.8rem;
+      margin-top: 1rem;
     }
-    .services {
-      background-color: #2a2a2a;
-      padding: 2rem;
-    }
-    .services h2 {
+    p.tagline {
+      font-size: 1.2rem;
       color: #ffcc00;
+    }
+    .services, .fleet, .contact {
+      padding: 3rem 2rem;
+    }
+    .services h2, .contact h2 {
+      color: #ffcc00;
+      text-align: center;
+      font-size: 2rem;
     }
     .services ul {
       list-style: none;
       padding: 0;
+      max-width: 800px;
+      margin: auto;
     }
     .services li {
-      margin: 0.5rem 0;
+      margin: 1rem 0;
+      padding: 0.5rem 1rem;
+      background: #1f1f1f;
+      border-left: 5px solid #ff0000;
+      border-radius: 5px;
     }
-    .contact {
-      background-color: #111;
-      padding: 2rem;
-      text-align: center;
+    .fleet {
+      background-color: #1c1c1c;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1.5rem;
+    }
+    .fleet img {
+      max-width: 300px;
+      border: 3px solid #ff0000;
+      border-radius: 12px;
     }
     .contact p {
       margin: 0.5rem 0;
+      text-align: center;
+      font-size: 1.1rem;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 0.7rem;
+      max-width: 400px;
+      margin: 2rem auto;
+      background-color: #1e1e1e;
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(255,0,0,0.3);
+    }
+    input, textarea {
+      padding: 0.7rem;
+      border: none;
+      border-radius: 5px;
+    }
+    input[type="submit"] {
+      background-color: #d00000;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    input[type="submit"]:hover {
+      background-color: #ff0000;
+    }
+    .socials {
+      text-align: center;
+      margin-top: 1rem;
+    }
+    .socials a {
+      margin: 0 12px;
+      color: #ffcc00;
+      text-decoration: none;
+      font-weight: bold;
     }
     footer {
       background-color: #000;
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
-    }
-    .fleet {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-      padding: 2rem;
-    }
-    .fleet img {
-      max-width: 300px;
-      border: 4px solid #ff0000;
-      border-radius: 10px;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-      max-width: 400px;
-      margin: 1rem auto;
-      background-color: #222;
-      padding: 1rem;
-      border-radius: 10px;
-    }
-    input, textarea {
-      padding: 0.5rem;
-      border: none;
-      border-radius: 5px;
-    }
-    input[type="submit"] {
-      background-color: #ff0000;
-      color: white;
-      cursor: pointer;
-    }
-    .socials {
-      margin-top: 1rem;
-    }
-    .socials a {
-      margin: 0 10px;
-      color: #ffcc00;
-      text-decoration: none;
+      color: #888;
     }
   </style>
 </head>
@@ -97,8 +115,9 @@
   <header>
     <img src="logga_7Brothers.png" alt="7 Brothers AB logo">
     <h1>7 Brothers AB</h1>
-    <p>Allt-i-ett: Biluthyrning, Reparation, Däck & Bilförsäljning</p>
+    <p class="tagline">Allt-i-ett: Biluthyrning, Reparation, Däck & Bilförsäljning</p>
   </header>
+
   <section class="services">
     <h2>Våra Tjänster</h2>
     <ul>
@@ -110,32 +129,36 @@
       <li>Biluthyrning (07:00–18:00, jour vid behov)</li>
     </ul>
   </section>
+
   <section class="fleet">
     <img src="Mina minibussar uppdaterad bild.png" alt="Minibussar">
     <img src="7 Brothers AB.png" alt="Reklamskylt">
     <img src="pussel 7 Brothers AB.png" alt="Pusselgrafik">
   </section>
-  <section class="contact">
-    <h2>Kontakta oss</h2>
-    <p>📞 0490-125 62</p>
-    <p>📱 070-646 36 86 • 073-053 89 91 • Biluthyrning: 070-200 31 19</p>
-    <p>✉️ 7.brothers@telia.com</p>
 
-    <form action="mailto:7.brothers@telia.com" method="post" enctype="text/plain">
-      <input type="text" name="name" placeholder="Ditt namn" required>
-      <input type="email" name="email" placeholder="Din e-post" required>
-      <textarea name="message" rows="4" placeholder="Ditt meddelande"></textarea>
-      <input type="submit" value="Skicka">
-    </form>
-
-    <div class="socials">
-      <a href="https://www.facebook.com/7brothersab" target="_blank">Facebook</a>
-      <a href="https://www.instagram.com/7brothersab" target="_blank">Instagram</a>
-      <a href="#">LinkedIn</a>
+  <section class="cars-for-sale">
+    <h2 style="text-align:center; color:#ffcc00;">Bilar till salu</h2>
+    <p style="text-align:center;">Klicka nedan för att se hela vårt aktuella utbud på Blocket:</p>
+    <div style="text-align:center; margin: 2rem;">
+      <a href="https://www.blocket.se/butik/7brothers" target="_blank" style="background-color:#d00000; color:white; padding: 1rem 2rem; text-decoration: none; border-radius: 10px; font-weight: bold; box-shadow: 0 0 10px rgba(255,0,0,0.5);">Besök vår Blocketbutik</a>
     </div>
   </section>
+
+  <div style="text-align:center; margin: 2rem auto; max-width: 800px;">
+    <h2 style="color: #ffcc00;">Hitta till oss</h2>
+    <iframe
+      src="https://www.google.com/maps?q=Traktorv%C3%A4gen+9,+V%C3%A4stervik&output=embed"
+      width="100%"
+      height="300"
+      style="border:0; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.5);"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+
   <footer>
-    © 7 Brothers AB | Designad med ❤️ av Leo & ChatGPT
+    © 7 Brothers AB | Webbdesign av Leo i samarbete med AI-teknologi från OpenAI
   </footer>
 </body>
 </html>
