--- a/index.html
+++ b/index.html
@@ -6,113 +6,140 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>7 Brothers AB</title>
   <style>
-    body { font-family: 'Segoe UI', sans-serif; margin: 0; background: #f4f4f4; color: #333; }
-    header { background: #b60000; color: white; padding: 1.5rem; text-align: center; }
-    nav a { margin: 0 1rem; color: white; text-decoration: none; font-weight: bold; }
-    section { max-width: 1000px; margin: auto; padding: 2rem 1rem; background: white; margin-top: 1rem; border-radius: 8px; }
-    h2 { color: #b60000; border-bottom: 2px solid #eee; padding-bottom: 0.5rem; }
-    .form-group { margin-bottom: 1rem; }
-    .form-group input, .form-group textarea, .form-group select {
-      width: 100%; padding: 0.5rem; border: 1px solid #ccc; border-radius: 5px;
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #0a0a0a;
+      color: #fff;
+    }
+    header {
+      background: linear-gradient(to right, #b60000, #000);
+      text-align: center;
+      padding: 1.5rem;
+    }
+    header h1 {
+      font-size: 3rem;
+      margin: 0;
+      color: #fff;
+      font-weight: 900;
+      text-shadow: 2px 2px #b60000;
+    }
+    nav {
+      text-align: center;
+      background: #1a1a1a;
+      padding: 1rem;
+    }
+    nav a {
+      margin: 0 1rem;
+      color: #ff0000;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .section {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 {
+      color: #ff0000;
+      border-bottom: 2px solid #ff0000;
+      padding-bottom: 0.5rem;
+    }
+    form {
+      background: #111;
+      padding: 1rem;
+      border-radius: 8px;
+      margin-top: 1rem;
+    }
+    input, select, textarea {
+      width: 100%;
+      padding: 0.7rem;
+      margin: 0.5rem 0;
+      border-radius: 5px;
+      border: none;
     }
     input[type="submit"] {
-      background-color: #b60000; color: white; border: none; padding: 0.7rem 1.5rem;
-      cursor: pointer; font-weight: bold; border-radius: 5px;
+      background: #b60000;
+      color: white;
+      cursor: pointer;
     }
-    .gallery { display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center; }
-    .gallery img {
-      width: 220px; height: auto; border-radius: 8px; border: 1px solid #ccc; box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+    .fleet {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: center;
     }
-    .btn-blocket {
-      display: inline-block; margin-top: 1.5rem; background: #b60000; color: white;
-      padding: 0.8rem 1.5rem; border-radius: 5px; text-decoration: none; font-weight: bold;
+    .fleet img {
+      max-width: 300px;
+      border: 3px solid #b60000;
+      border-radius: 8px;
+    }
+    .button-link {
+      display: inline-block;
+      background: #b60000;
+      color: white;
+      padding: 0.8rem 1.5rem;
+      text-decoration: none;
+      border-radius: 5px;
+      margin-top: 1rem;
     }
     footer {
-      background: #333; color: white; text-align: center; padding: 1rem; margin-top: 2rem;
+      background: #000;
+      color: #888;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
-
-<header>
-  <h1>7 Brothers AB</h1>
+  <header>
+    <h1>7 Brothers AB</h1>
+  </header>
   <nav>
-    <a href="#services">Tjänster</a>
-    <a href="#booking">Boka</a>
-    <a href="#fleet">Galleri</a>
-    <a href="#contact">Kontakt</a>
+    <a href="#service">Service & Reparation</a>
+    <a href="#minibuss">Hyr Minibuss</a>
+    <a href="#blocket">Blocketbutik</a>
   </nav>
-</header>
 
-<section id="services">
-  <h2>Våra tjänster</h2>
-  <ul>
-    <li>Service & Reparation på alla bilmärken</li>
-    <li>Hjulinställning & Däckbyte</li>
-    <li>AC-påfyllning</li>
-    <li>Däck- & Fälgförsäljning</li>
-    <li>Bilförsäljning & förmedling</li>
-    <li>Biluthyrning: 9-sitsiga minibussar & personbilar</li>
-  </ul>
-</section>
-
-<section id="booking">
-  <h2>Boka service eller hyrbil</h2>
-  <form>
-    <div class="form-group">
-      <input type="text" placeholder="Namn" required />
-    </div>
-    <div class="form-group">
-      <input type="tel" placeholder="Telefonnummer" required />
-    </div>
-    <div class="form-group">
+  <section class="section" id="service">
+    <h2>Boka Service & Reparation</h2>
+    <form>
+      <input type="text" placeholder="Namn" required>
+      <input type="email" placeholder="E-post" required>
       <select>
-        <option>Välj typ av bokning</option>
-        <option>Service / Reparation</option>
-        <option>Quick Fix (snabbare hantering)</option>
-        <option>Hyra 9-sitsig minibuss</option>
+        <option value="">Välj typ av service</option>
+        <option value="vanlig">Vanlig</option>
+        <option value="quickfix">Quick Fix (Snabb men kostar mer)</option>
       </select>
-    </div>
-    <div class="form-group">
-      <textarea placeholder="Övrig information..."></textarea>
-    </div>
-    <input type="submit" value="Skicka bokningsförfrågan" />
-  </form>
-</section>
+      <textarea placeholder="Beskriv vad som behövs göras"></textarea>
+      <input type="submit" value="Boka">
+    </form>
+  </section>
 
-<section id="fleet">
-  <h2>Galleri</h2>
-  <div class="gallery">
-    <img src="Mina minibussar uppdaterad bild.png" alt="Minibussar" />
-    <img src="7 Brothers AB.png" alt="Skylt" />
-    <img src="pussel 7 Brothers AB.png" alt="Tjänster" />
-    <img src="Uppdaterad bild av utsidan på firman.png" alt="Fasaden" />
-    <img src="Mercedesbild uppdaterad.png" alt="Mercedes" />
-    <img src="Alla bilmärken.jpg" alt="Alla bilmärken" />
-    <img src="7 Brothers AB, Högsta kreditvärdighet.jpeg" alt="Kreditvärdighet" />
-  </div>
-</section>
+  <section class="section" id="minibuss">
+    <h2>Boka 9-sitsig Minibuss</h2>
+    <form>
+      <input type="text" placeholder="Namn" required>
+      <input type="email" placeholder="E-post" required>
+      <input type="date" placeholder="Datum för uthyrning" required>
+      <input type="submit" value="Boka Minibuss">
+    </form>
+  </section>
 
-<section id="contact">
-  <h2>Kontakt & Hitta hit</h2>
-  <p>📍 Traktorvägen 9, Västervik</p>
-  <p>📧 E-post: 7.brothersab@telia.com</p>
-  <a href="https://www.blocket.se/butik/7brothers" class="btn-blocket" target="_blank">Se våra bilar på Blocket</a>
-  <div style="margin-top:1rem;">
-    <iframe
-      src="https://www.google.com/maps?q=Traktorv%C3%A4gen+9,+V%C3%A4stervik&output=embed"
-      width="100%"
-      height="300"
-      style="border:0; border-radius: 10px;"
-      allowfullscreen=""
-      loading="lazy">
-    </iframe>
-  </div>
-</section>
+  <section class="section fleet">
+    <img src="7BrothersAB redigerad bild.png" alt="Reklamskylt">
+    <img src="pussel 7 Brothers AB.png" alt="Tjänster">
+  </section>
 
-<footer>
-  © 2025 7 Brothers AB – Designad av Leo i samarbete med AI-teknologi från OpenAI
-</footer>
+  <section class="section" id="blocket">
+    <h2>Se våra bilar på Blocket</h2>
+    <a class="button-link" href="https://www.blocket.se/butik/7brothers" target="_blank">Till Blocketbutiken</a>
+  </section>
 
+  <footer>
+    © 2025 7 Brothers AB | info: 7.brothersab@telia.com
+  </footer>
 </body>
 </html>
