--- a/index.html
+++ b/index.html
@@ -9,137 +9,139 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #0a0a0a;
-      color: #fff;
+      background-color: #0f0f0f;
+      color: white;
     }
     header {
-      background: linear-gradient(to right, #b60000, #000);
+      background-color: black;
+      color: red;
       text-align: center;
-      padding: 1.5rem;
+      padding: 2rem 1rem;
     }
     header h1 {
       font-size: 3rem;
-      margin: 0;
-      color: #fff;
-      font-weight: 900;
-      text-shadow: 2px 2px #b60000;
+      font-weight: bold;
+      color: red;
     }
     nav {
       text-align: center;
-      background: #1a1a1a;
-      padding: 1rem;
+      margin: 2rem;
     }
     nav a {
       margin: 0 1rem;
-      color: #ff0000;
       text-decoration: none;
-      font-weight: bold;
+      color: #fff;
+      background-color: red;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+    nav a:hover {
+      background-color: #cc0000;
     }
     .section {
       padding: 2rem;
-      max-width: 900px;
-      margin: auto;
+      text-align: center;
     }
-    h2 {
-      color: #ff0000;
-      border-bottom: 2px solid #ff0000;
-      padding-bottom: 0.5rem;
+    .section h2 {
+      color: #ff3333;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    .grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+    }
+    .grid img {
+      max-width: 300px;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      border: 2px solid red;
     }
     form {
-      background: #111;
+      background-color: #1a1a1a;
       padding: 1rem;
-      border-radius: 8px;
-      margin-top: 1rem;
+      max-width: 400px;
+      margin: auto;
+      border-radius: 10px;
     }
-    input, select, textarea {
+    input, select {
       width: 100%;
-      padding: 0.7rem;
+      padding: 0.6rem;
       margin: 0.5rem 0;
       border-radius: 5px;
       border: none;
     }
-    input[type="submit"] {
-      background: #b60000;
+    button {
+      width: 100%;
+      padding: 0.8rem;
+      background-color: red;
       color: white;
+      font-weight: bold;
+      border: none;
+      border-radius: 5px;
       cursor: pointer;
     }
-    .fleet {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      justify-content: center;
-    }
-    .fleet img {
-      max-width: 300px;
-      border: 3px solid #b60000;
-      border-radius: 8px;
-    }
-    .button-link {
-      display: inline-block;
-      background: #b60000;
-      color: white;
-      padding: 0.8rem 1.5rem;
-      text-decoration: none;
-      border-radius: 5px;
-      margin-top: 1rem;
-    }
     footer {
-      background: #000;
-      color: #888;
       text-align: center;
       padding: 1rem;
-      font-size: 0.9rem;
-      margin-top: 2rem;
+      background-color: black;
+      color: gray;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>7 Brothers AB</h1>
-  </header>
-  <nav>
-    <a href="#service">Service & Reparation</a>
-    <a href="#minibuss">Hyr Minibuss</a>
-    <a href="#blocket">Blocketbutik</a>
-  </nav>
 
-  <section class="section" id="service">
-    <h2>Boka Service & Reparation</h2>
-    <form>
-      <input type="text" placeholder="Namn" required>
-      <input type="email" placeholder="E-post" required>
-      <select>
-        <option value="">Välj typ av service</option>
-        <option value="vanlig">Vanlig</option>
-        <option value="quickfix">Quick Fix (Snabb men kostar mer)</option>
-      </select>
-      <textarea placeholder="Beskriv vad som behövs göras"></textarea>
-      <input type="submit" value="Boka">
-    </form>
-  </section>
+<header>
+  <h1>7 Brothers AB</h1>
+  <p>Bilservice • Reparation • Hyrbilar • Försäljning</p>
+</header>
 
-  <section class="section" id="minibuss">
-    <h2>Boka 9-sitsig Minibuss</h2>
-    <form>
-      <input type="text" placeholder="Namn" required>
-      <input type="email" placeholder="E-post" required>
-      <input type="date" placeholder="Datum för uthyrning" required>
-      <input type="submit" value="Boka Minibuss">
-    </form>
-  </section>
+<nav>
+  <a href="#service">Boka Service</a>
+  <a href="#minibuss">Boka Minibuss</a>
+  <a href="https://www.blocket.se/butik/7brothers" target="_blank">Till Blocketbutiken</a>
+</nav>
 
-  <section class="section fleet">
-    <img src="7BrothersAB redigerad bild.png" alt="Reklamskylt">
-    <img src="pussel 7 Brothers AB.png" alt="Tjänster">
-  </section>
+<section id="gallery" class="section">
+  <h2>Galleri</h2>
+  <div class="grid">
+    <img src="Uppdaterad bild av utsidan på firman.png" alt="Utsida">
+    <img src="7 Brothers AB's företagsbild.png" alt="Personalen">
+    <img src="7 Brothers AB, Högsta kreditvärdighet.jpeg" alt="Kreditvärdighet">
+    <img src="Alla bilmärken.jpg" alt="Bilvarumärken">
+  </div>
+</section>
 
-  <section class="section" id="blocket">
-    <h2>Se våra bilar på Blocket</h2>
-    <a class="button-link" href="https://www.blocket.se/butik/7brothers" target="_blank">Till Blocketbutiken</a>
-  </section>
+<section id="service" class="section">
+  <h2>Boka Service & Reparation</h2>
+  <form>
+    <input type="text" placeholder="Namn" required />
+    <input type="email" placeholder="E-post" required />
+    <select>
+      <option>Vanlig service</option>
+      <option>Quick Fix (dyrare men snabbare)</option>
+    </select>
+    <button type="submit">Boka nu</button>
+  </form>
+</section>
 
-  <footer>
-    © 2025 7 Brothers AB | info: 7.brothersab@telia.com
-  </footer>
+<section id="minibuss" class="section">
+  <h2>Boka 9-sitsig Minibuss</h2>
+  <form>
+    <input type="text" placeholder="Namn" required />
+    <input type="email" placeholder="E-post" required />
+    <input type="date" />
+    <button type="submit">Boka minibuss</button>
+  </form>
+</section>
+
+<footer>
+  &copy; 2025 7 Brothers AB – All rights reserved.
+</footer>
+
 </body>
 </html>
