--- a/index.html
+++ b/index.html
@@ -7,141 +7,130 @@
   <title>7 Brothers AB</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0f0f0f;
+      background-color: #0d0d0d;
       color: white;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
     }
     header {
-      background-color: black;
-      color: red;
+      background-color: #1a1a1a;
+      padding: 1.5rem;
       text-align: center;
-      padding: 2rem 1rem;
     }
     header h1 {
-      font-size: 3rem;
-      font-weight: bold;
       color: red;
+      font-size: 3rem;
+      margin: 0;
     }
-    nav {
+    header p {
+      color: #f44;
+      margin-top: 0.5rem;
+    }
+    .nav-buttons {
       text-align: center;
-      margin: 2rem;
+      margin: 1rem 0;
     }
-    nav a {
-      margin: 0 1rem;
-      text-decoration: none;
-      color: #fff;
+    .nav-buttons a {
       background-color: red;
-      padding: 0.5rem 1rem;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
+      color: white;
+      padding: 0.6rem 1.2rem;
+      margin: 0.5rem;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
     }
-    nav a:hover {
-      background-color: #cc0000;
-    }
-    .section {
-      padding: 2rem;
-      text-align: center;
-    }
-    .section h2 {
-      color: #ff3333;
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-    .grid {
+    .gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 1rem;
-    }
-    .grid img {
-      max-width: 300px;
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-      border: 2px solid red;
-    }
-    form {
-      background-color: #1a1a1a;
       padding: 1rem;
-      max-width: 400px;
-      margin: auto;
+    }
+    .gallery img {
+      width: 300px;
+      border: 3px solid red;
       border-radius: 10px;
     }
-    input, select {
+    .form-section {
+      background-color: #1f1f1f;
+      padding: 2rem;
+      margin: 2rem;
+      border-radius: 10px;
+      max-width: 500px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .form-section h2 {
+      color: red;
+      text-align: center;
+    }
+    .form-section input, .form-section select {
       width: 100%;
       padding: 0.6rem;
       margin: 0.5rem 0;
       border-radius: 5px;
       border: none;
     }
-    button {
+    .form-section button {
       width: 100%;
-      padding: 0.8rem;
+      padding: 0.7rem;
       background-color: red;
+      border: none;
       color: white;
       font-weight: bold;
-      border: none;
       border-radius: 5px;
-      cursor: pointer;
     }
     footer {
+      background-color: #111;
+      color: #ccc;
       text-align: center;
       padding: 1rem;
-      background-color: black;
-      color: gray;
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>7 Brothers AB</h1>
+    <p>Bilservice • Reparationer • Hyrbilar • Försäljning</p>
+  </header>
 
-<header>
-  <h1>7 Brothers AB</h1>
-  <p>Bilservice • Reparation • Hyrbilar • Försäljning</p>
-</header>
+  <div class="nav-buttons">
+    <a href="#service">Boka Service</a>
+    <a href="#minibuss">Boka Minibuss</a>
+    <a href="https://www.blocket.se/butik/7brothers" target="_blank">Till Blocketbutiken</a>
+  </div>
 
-<nav>
-  <a href="#service">Boka Service</a>
-  <a href="#minibuss">Boka Minibuss</a>
-  <a href="https://www.blocket.se/butik/7brothers" target="_blank">Till Blocketbutiken</a>
-</nav>
-
-<section id="gallery" class="section">
-  <h2>Galleri</h2>
-  <div class="grid">
-    <img src="Uppdaterad bild av utsidan på firman.png" alt="Utsida">
+  <div class="gallery">
+    <img src="Uppdaterad bild av utsidan på firman.png" alt="Utsidan">
     <img src="7 Brothers AB's företagsbild.png" alt="Personalen">
     <img src="7 Brothers AB, Högsta kreditvärdighet.jpeg" alt="Kreditvärdighet">
-    <img src="Alla bilmärken.jpg" alt="Bilvarumärken">
+    <img src="Alla bilmärken.jpg" alt="Bilmärken">
+    <img src="pussel 7 Brothers AB.png" alt="Pussel">
+    <img src="7BrothersAB.png" alt="Reklamskylt">
   </div>
-</section>
 
-<section id="service" class="section">
-  <h2>Boka Service & Reparation</h2>
-  <form>
-    <input type="text" placeholder="Namn" required />
-    <input type="email" placeholder="E-post" required />
+  <div id="service" class="form-section">
+    <h2>Boka Service & Reparation</h2>
+    <input type="text" placeholder="Namn" />
+    <input type="email" placeholder="E-post" />
     <select>
       <option>Vanlig service</option>
-      <option>Quick Fix (dyrare men snabbare)</option>
+      <option>Quick Fix (snabb men lite dyrare)</option>
     </select>
-    <button type="submit">Boka nu</button>
-  </form>
-</section>
+    <button>Boka nu</button>
+  </div>
 
-<section id="minibuss" class="section">
-  <h2>Boka 9-sitsig Minibuss</h2>
-  <form>
-    <input type="text" placeholder="Namn" required />
-    <input type="email" placeholder="E-post" required />
+  <div id="minibuss" class="form-section">
+    <h2>Boka 9-sitsig Minibuss</h2>
+    <input type="text" placeholder="Namn" />
+    <input type="email" placeholder="E-post" />
     <input type="date" />
-    <button type="submit">Boka minibuss</button>
-  </form>
-</section>
+    <button>Boka minibuss</button>
+  </div>
 
-<footer>
-  &copy; 2025 7 Brothers AB – All rights reserved.
-</footer>
-
+  <footer>
+    © 2025 7 Brothers AB | All rights reserved
+  </footer>
 </body>
 </html>
