--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
     <p class="tagline">Bilservice • Reparationer • Hyrbilar • Försäljning</p>
   </header>
 
-  <section class="button-container">
-    <button onclick="location.href='#service'">Boka Service</button>
-    <button onclick="location.href='#minibuss'">Boka Minibuss</button>
-    <button onclick="location.href='https://www.blocket.se/butik/7brothersab'">Till Blocketbutiken</button>
-  </section>
+  <main>
+    <section class="button-container">
+      <button onclick="location.href='#service'">Boka Service</button>
+      <button onclick="location.href='#minibuss'">Boka Minibuss</button>
+      <button onclick="location.href='https://www.blocket.se/butik/7brothersab'">Till Blocketbutiken</button>
+    </section>
 
-  <section class="image-section">
-    <img src="verkstad.jpg" alt="Vår verkstad" />
-    <img src="team.jpg" alt="Vårt team" />
-  </section>
+    <section class="image-section">
+      <img src="verkstad.jpg" alt="Vår verkstad" />
+      <img src="team.jpg" alt="Vårt team" />
+    </section>
+  </main>
 </body>
 </html>
