--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
     <p class="tagline">Bilservice • Reparationer • Hyrbilar • Försäljning</p>
   </header>
 
-  <main>
-    <section class="button-container">
-      <button onclick="location.href='#service'">Boka Service</button>
-      <button onclick="location.href='#minibuss'">Boka Minibuss</button>
-      <button onclick="location.href='https://www.blocket.se/butik/7brothersab'">Till Blocketbutiken</button>
-    </section>
+  <nav class="button-container">
+    <a href="#service" class="btn">Boka Service</a>
+    <a href="#minibuss" class="btn">Boka Minibuss</a>
+    <a href="https://www.blocket.se/butik/7brothersab" class="btn">Till Blocketbutiken</a>
+  </nav>
 
-    <section class="image-section">
-      <img src="verkstad.jpg" alt="Vår verkstad" />
-      <img src="team.jpg" alt="Vårt team" />
-    </section>
+  <main class="image-section">
+    <img src="verkstad.jpg" alt="Vår verkstad" />
+    <img src="team.jpg" alt="Vårt team" />
   </main>
 </body>
 </html>
