--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <p class="tagline">Bilservice • Reparationer • Hyrbilar • Försäljning</p>
   </header>
 
-  <nav class="button-container">
-    <a href="#service" class="btn">Boka Service</a>
-    <a href="#minibuss" class="btn">Boka Minibuss</a>
-    <a href="https://www.blocket.se/butik/7brothersab" class="btn">Till Blocketbutiken</a>
-  </nav>
+  <div class="button-container">
+    <button onclick="location.href='#service'">Boka Service</button>
+    <button onclick="location.href='#minibuss'">Boka Minibuss</button>
+    <button onclick="location.href='https://www.blocket.se/butik/7brothersab'">Till Blocketbutiken</button>
+  </div>
 
-  <main class="image-section">
+  <div class="image-section">
     <img src="verkstad.jpg" alt="Vår verkstad" />
     <img src="team.jpg" alt="Vårt team" />
-  </main>
+  </div>
 </body>
 </html>
