--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
+
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>7 Brothers AB</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>7 Brothers AB</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>7 Brothers AB</h1>
-    <p>Bilservice • Reparationer • Hyrbilar • Försäljning</p>
-  </header>
-  <nav>
-    <a href="#">Boka Service</a>
-    <a href="#">Boka Minibuss</a>
-    <a href="#">Till Blocketbutiken</a>
-  </nav>
-  <main>
-    <section>
-      <img src="team.jpg" alt="Team">
-      <img src="skylt.jpg" alt="Skylt">
-      <img src="bilmärken.jpg" alt="Bilmärken">
-      <img src="kreditvärdighet.jpg" alt="Kreditvärdighet">
-      <img src="minibussar.jpg" alt="Minibussar">
-      <img src="pussel.jpg" alt="Pussel">
-      <img src="utsida.jpg" alt="Utsida">
-      <img src="mercedes.jpg" alt="Mercedes">
-    </section>
-  </main>
+    <header>
+        <h1>7 Brothers AB</h1>
+        <p>Bilservice • Reparationer • Hyrbilar • Försäljning</p>
+        <nav>
+            <a href="#">Boka Service</a>
+            <a href="#">Boka Minibuss</a>
+            <a href="#">Till Blocketbutiken</a>
+        </nav>
+    </header>
+    <main>
+        <section class="gallery">
+            <img src="images/verkstad.jpg" alt="Vår verkstad">
+            <img src="images/team.jpg" alt="Vårt team">
+            <img src="images/affisch.jpg" alt="Tjänsteaffisch">
+            <img src="images/minibussar.jpg" alt="Minibussar">
+            <img src="images/mercedes.jpg" alt="Mercedesbil">
+            <img src="images/pussel.jpg" alt="Pussel med tjänster">
+            <img src="images/kredit.jpg" alt="Högsta kreditvärdighet">
+            <img src="images/loggor.jpg" alt="Alla bilmärken">
+        </section>
+    </main>
 </body>
 </html>
