--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
-
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7 Brothers AB</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>7 Brothers AB</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>7 Brothers AB</h1>
-        <p>Bilservice • Reparationer • Hyrbilar • Försäljning</p>
-        <nav>
-            <a href="#">Boka Service</a>
-            <a href="#">Boka Minibuss</a>
-            <a href="#">Till Blocketbutiken</a>
-        </nav>
-    </header>
-    <main>
-        <section class="gallery">
-            <img src="images/verkstad.jpg" alt="Vår verkstad">
-            <img src="images/team.jpg" alt="Vårt team">
-            <img src="images/affisch.jpg" alt="Tjänsteaffisch">
-            <img src="images/minibussar.jpg" alt="Minibussar">
-            <img src="images/mercedes.jpg" alt="Mercedesbil">
-            <img src="images/pussel.jpg" alt="Pussel med tjänster">
-            <img src="images/kredit.jpg" alt="Högsta kreditvärdighet">
-            <img src="images/loggor.jpg" alt="Alla bilmärken">
-        </section>
-    </main>
+  <header>
+    <h1>7 Brothers AB</h1>
+    <nav>
+      <a href="#">Boka Service & Reparation</a>
+      <a href="#">Boka 9-sitsig Minibuss</a>
+      <a href="https://www.blocket.se/butik/7brothersab" target="_blank">Till Blocketbutiken</a>
+    </nav>
+  </header>
+  <main>
+    <section class="gallery">
+      <img src="images/verkstad.jpg" alt="Verkstad">
+      <img src="images/team.jpg" alt="Team">
+      <img src="images/skylt.jpg" alt="Skylt">
+      <img src="images/minibussar.jpg" alt="Minibussar">
+      <img src="images/mercedes.jpg" alt="Mercedes">
+      <img src="images/pussel.jpg" alt="Pussel">
+      <img src="images/kredit.jpg" alt="Kreditvärdighet">
+      <img src="images/loggor.jpg" alt="Alla bilmärken">
+    </section>
+  </main>
+  <footer>
+    <p>© 2025 7 Brothers AB</p>
+  </footer>
 </body>
 </html>
